data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4359.wast
;; 8. **Test Description**: Implement a function that potentially alters memory state indirectly and verify through `br_if` if the condition correctly branches based on the changed memory state.      **Specific Constraint**: Correct handling of side effects such as memory state alteration.      **Incorrect Condition Evaluation**: Ensure `br_if` evaluates conditions accurately post memory alterations.

(assert_invalid
  (module
    (type $sig (func (param i32)))
    (table funcref (elem $f))
    (memory 1)
    (func $f (param i32)
      (i32.store (i32.const 0) (i32.const 10))
    )
    (func $test
      (i32.store (i32.const 0) (i32.const 0))
      (call_indirect (type $sig) (i32.const 0) (i32.const 0))
      (br_if 0 (i32.eq (i32.load (i32.const 0)) (i32.const 10)))
    )
  )
  "type mismatch"
)